@@ -23,13 +23,6 @@ Template: ethdetect/modprobe_error
 Type: error
 _Description: Error while running '${CMD_LINE_PARAM}'
 
-Template: ethdetect/detection_type
-Type: boolean
-Default: true
-_Description: Try to detect hardware?
- Some hardware may be automatically detected.  If you don't use
- automatic detection, you will be prompted to identify your hardware.
-
 Template: ethdetect/detect_progress_title
 Type: text
 _Description: Detecting network hardware
