@@ -9,6 +9,10 @@ ddetect (0.95) UNRELEASED; urgency=low
       selected from the manual list. The previous method didn't work
       since many media lack a menu item to load floppies. Closes: #247941
     - BTW, think "firmware floppy". :-(
+    - Always autodetect network hardware. The question about whether to do
+      this was asked as low priority; hw-detect is safe and always asks at low
+      priority before loading modules, so the question was redundant.
+      Closes: #219890
   * Joshua Kwan
     - Devnames for PCMCIA devices, as given by their built in names, using
       the information from /var/run/stab. Woohoo!
